--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nestjs-learning-frontend</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.staticfile.org/font-awesome/6.2.1/css/all.min.css" />
   </head>
   <body>
     <div id="app"></div>
